css/stylesheet.css
body {
  font-family: 'Open Sans', sans-serif;
  margin: 0;
  background-color: white;
}
span {
  height: 19px;
  width: 19px;
  border-radius: 50%;
  display: inline-block;
  margin-right:10px;
}
h1 {
  font-size: 120px;
}
h2 {
  font-size: 24px;
  font-weight: 400;
}
h3 {
  font-size: 18px;
  margin-top: 10px;
  margin-bottom: 0;
}

/* styles for tube dots */
.bakerloo {
  background-color: #B05F21;
}
.central {
  background-color: #ED462F;
}
.circle {
  background-color: #FBD133;
}
.district {
  background-color: #3D843E;
}
.elizabeth {
  background-color: #6950A1;
}
.hammersmith {
  background-color: #F085A0;
}
.jubilee {
  background-color: #959CA1;
}
.metropolitan {
  background-color: #99305E;
}
.northern {
  background-color: #231F20;
}
.overground {
  background-color: #E76A10;
}
.piccadilly {
  background-color: #1B3F94;
}
.victoria {
  background-color: #379DDC;
}
.waterloo {
  background-color: #84CDBC;
}
.dlr {
  background-color: #00AFAD;
}
.tfl-rail {
  background-color: #0018A8;
}
.tram {
  background-color: #66CC00;
}

/* status colour */
.statusbakerloo {
  color:#0C2BFF;
}
.statuscentral {
  color:#0C2BFF;
}
.statuscircle {
  color:#0C2BFF;
}
.statusdistrict {
  color:#0C2BFF;
}
.statushammersmith {
  color:#0C2BFF;
}
.statusjubilee {
  color:#0C2BFF;
}
.statusmetropolitan {
  color:#0C2BFF;
}
.statusnorthern {
  color:#0C2BFF;
}
.statusoverground {
  color:#0C2BFF;
}
.statuspiccadilly {
  color:#0C2BFF;
}
.statusvictoria {
  color:#0C2BFF;
}
.statuswaterloo {
  color:#0C2BFF;
}
.statusdlr {
  color:#0C2BFF;
}
.statusrail {
  color:#0C2BFF;
}
.statustram {
  color:#0C2BFF;
}




/* containers for tubes */
.tube-bakerloo {
  float: left;
  width: 33%;
  padding-bottom: 50px;
  display: inline-block;
}
.tube-central {
  float: left;
  width: 33%;
  padding-bottom: 50px;
  display: inline-block;
}
.tube-circle {
  float: left;
  width: 33%;
  padding-bottom: 50px;
  display: inline-block;
}
.tube-district {
  float: left;
  width: 33%;
  padding-bottom: 50px;
  display: inline-block;
}
.tube-elizabeth {
  float: left;
  width: 33%;
  padding-bottom: 50px;
  display: inline-block;
}
.tube-hammersmith {
  float: left;
  width: 33%;
  padding-bottom: 50px;
  display: inline-block;
}
.tube-jubilee {
  float: left;
  width: 33%;
  padding-bottom: 50px;
  display: inline-block;
}
.tube-metropolitan {
  float: left;
  width: 33%;
  padding-bottom: 50px;
  display: inline-block;
}
.tube-northern {
  float: left;
  width: 33%;
  padding-bottom: 50px;
  display: inline-block;
}
.tube-overground {
  float: left;
  width: 33%;
  padding-bottom: 50px;
  display: inline-block;
}
.tube-piccadilly {
  float: left;
  width: 33%;
  padding-bottom: 50px;
  display: inline-block;
}
.tube-victoria {
  float: left;
  width: 33%;
  padding-bottom: 50px;
  display: inline-block;
}
.tube-waterloo {
  float: left;
  width: 33%;
  padding-bottom: 50px;
  display: inline-block;
}
.tube-dlr {
  float: left;
  width: 33%;
  padding-bottom: 50px;
  display: inline-block;
}
.tube-rail {
  float: left;
  width: 33%;
  padding-bottom: 50px;
  display: inline-block;
}
.tube-tram {
  float: left;
  width: 33%;
  padding-bottom: 50px;
  display: inline-block;
}

/* styling for button */
.button {
  height: 64px;
  font-size: 24px;
  color: #fff;
  background: #0C2BFF;
  border-radius: 100px;
  width: 150px;
  cursor: pointer;
  border: 0;
  margin: 0 auto;

  transition: color 0.3s ease; /* vendorless fallback */
  -o-transition: color 0.3s ease; /* opera */
  -ms-transition: color 0.3s ease; /* IE 10 */
  -moz-transition: color 0.3s ease; /* Firefox */
  -webkit-transition: color 0.3s ease; /*safari and chrome */

  transition: background 0.3s ease; /* vendorless fallback */
  -o-transition: background 0.3s ease; /* opera */
  -ms-transition: background 0.3s ease; /* IE 10 */
  -moz-transition: background 0.3s ease; /* Firefox */
  -webkit-transition: background 0.3s ease; /*safari and chrome */
}
.button:hover {
  background: #0922CC;
  color: #fff;
}
.button:focus {
  outline: 0;
}

/* makes button sticky */
.sticky-button {
  position: fixed;
  top: 50px;
  right: 10%;
}

/* makes logo 90px */
.logo {
  height: 90px;
}

/* centrally aligns logo */
.logo-wrapper {
  width: 90px;
  padding-left: 10%;
  margin: 0;
  padding-top: 37px;
}

/* spacing for intro */
.content-width {
  padding-left: 10%;
  padding-right: 10%;
}

/* spacing for list */
.list {
  display: inline-block;
  padding-bottom: 50px;
  padding-left: 10%;
  width: 100%;
}

/* makes title align with dot */
.tube-title {
  display: inline-block;
  margin-bottom: 0;
}

/* Create 3 equal columns that floats next to each other */
.tube {
  float: left;
  width: 33%;
  padding-bottom: 50px;
  display: inline-block;
}

/* On screens that are 992px wide or less, go from 3 columns to 2 columns */
@media screen and (max-width: 992px) {
  h1 {
    font-size: 72px;
    }
    .tube-bakerloo {
      width: 50%;
    }
    .tube-central {
      width: 50%;
    }
    .tube-circle {
      width: 50%;
    }
    .tube-district {
      width: 50%;
    }
    .tube-elizabeth {
      width: 50%;
    }
    .tube-hammersmith {
      width: 50%;
    }
    .tube-jubilee {
      width: 50%;
    }
    .tube-metropolitan {
      width: 50%;
    }
    .tube-northern {
      width: 50%;
    }
    .tube-overground {
      width: 50%;
    }
    .tube-piccadilly {
      width: 50%;
    }
    .tube-victoria {
      width: 50%;
    }
    .tube-waterloo {
      width: 50%;
    }
    .tube-dlr {
      width: 50%;
    }
    .tube-rail {
      width: 50%;
    }
    .tube-tram {
      width: 50%;
    }
}

/* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {
  h1 {
      font-size: 56px;
      margin-top: 25px;
    }
    .tube-bakerloo {
      width: 100%;
    }
    .tube-central {
      width: 100%;
    }
    .tube-circle {
      width: 100%;
    }
    .tube-district {
      width: 100%;
    }
    .tube-elizabeth {
      width: 100%;
    }
    .tube-hammersmith {
      width: 100%;
    }
    .tube-jubilee {
      width: 100%;
    }
    .tube-metropolitan {
      width: 100%;
    }
    .tube-northern {
      width: 100%;
    }
    .tube-overground {
      width: 100%;
    }
    .tube-piccadilly {
      width: 100%;
    }
    .tube-victoria {
      width: 100%;
    }
    .tube-waterloo {
      width: 100%;
    }
    .tube-dlr {
      width: 100%;
    }
    .tube-rail {
      width: 100%;
    }
    .tube-tram {
      width: 100%;
    }

  .list {
    display: inline-block;
    padding-top: 0;
    padding-left: 10%;
  }
  .tube {
    padding-bottom: 0;
  }
}

